[package]
name = "aizoo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
serde = { version = "1.0.178", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
warp = "0.3.5"

